<resources>
    <string name="app_name">EasyDomotic</string>
    <string name="ModbusTransIdOutOfRangeException">Transaction Identifier is out of range.</string>
    <string name="ModbusProtocolOutOfRangeException">Protocol Identifier is out of range.</string>
    <string name="ModbusLengthOutOfRangeException">Length is out of range.</string>
    <string name="ModbusByteCountOutOfRangeException">Byte Count is out of range.</string>
    <string name="ModbusUnitIdOutOfRangeException">Unit Identifier is out of range.</string>
    <string name="ModbusUnitIdNotMatchingException">Unit Identifier received doesn\'t match with the expected one.</string>
    <string name="ModbusAddressOutOfRangeException">Address is out of range.</string>
    <string name="ModbusValueArrayLengthOutOfRangeException">Value Array Length is out of range.</string>
    <string name="ModbusValueOutOfRangeException">Value is out of range.</string>
    <string name="ModbusMBAPLengthException">MBAP length Out Of Range.</string>
    <string name="ModbusPDULengthException">PDU length Out Of Range.</string>
    <string name="ModbusCRCException">CRC Error.</string>
    <string name="ModbusIllegalFunctionException">Illegal Function Exception.</string>
    <string name="ModbusIllegalDataAddressException">Illegal Data Address Exception.</string>
    <string name="ModbusIllegalDataValueException">Illegal Data Value Exception.</string>
    <string name="ModbusServerDeviceFailureException">Server Device Failure Exception.</string>
    <string name="ModbusUnknowException">Unknow Exception.</string>
    <string name="TimeoutException">Timeout.</string>
    <string name="tics_idle">Idle</string>
    <string name="tics_offline">Offline</string>
    <string name="tics_connecting">Connecting#8230</string>
    <string name="tics_online">Online</string>
    <string name="tics_error">Error</string>
    <string name="tics_timeout">Timeout</string>
    <string name="tics_disconnecting">Disconnecting#8230</string>
    <string name="ticwos_idle">Idle</string>
    <string name="ticwos_ok">OK</string>
    <string name="ticwos_error">Error</string>
    <string name="ticwos_timeout">Timeout</string>
    <string name="settings_title_dialog_section_new_room">Room</string>
    <string name="settings_title_section_new_room">New Room</string>
    <string name="settings_title_section_open_room">Open Room</string>
    <string name="title_item_menu_delete_room">Delete Room</string>
    <string name="settings_title_dialog_section_add_switch">Switch</string>
    <string name="settings_title_section_add_switch">Add Switch</string>
    <string name="settings_title_section_open_switch">Open Switch</string>
    <string name="settings_title_section_edit_switch">Edit Switch</string>
    <string name="settings_title_dialog_section_add_numeric_value">Numeric Value</string>
    <string name="settings_title_section_add_numeric_value">Add Numeric Value</string>
    <string name="settings_title_section_open_numeric_value">Open Numeric Value</string>
    <string name="settings_title_section_edit_numeric_value">Edit Numeric Value</string>
    <string name="settings_title_dialog_section_add_sensor_value">Sensor Value</string>
    <string name="settings_title_section_add_raw_sensor_value">Add Raw Sensor Value</string>
    <string name="settings_title_section_add_calibr_sensor_value">Add Cal. Sensor Value</string>
    <string name="settings_title_section_open_sensor_value">Open Sensor Value</string>
    <string name="settings_title_section_edit_sensor_value">Edit Sensor Value</string>
    <string name="settings_title_section_new_tcp_ip_client">New TCP IP Client</string>
    <string name="settings_title_section_open_tcp_ip_client">Open TCP IP Client</string>
    <string name="settings_title_section_edit_tcp_ip_client">Edit TCP IP Client</string>
    <string name="settings_title_section_new_bluetooth_client">New Bluetooth Client</string>
    <string name="settings_title_section_open_bluetooth_client">Open Bluetooth Client</string>
    <string name="settings_title_section_edit_bluetooth_client">Edit Bluetooth Client</string>
    <string name="settings_title_section_disp"> </string>
    <string name="settings_title_section_save">Save Room</string>
    <string name="text_tv_room_name">Room Name</string>
    <string name="text_toast_room_name_not_valid">Room Name not valid.</string>
    <string name="text_toast_room_name_already_exist">Room Name already exist.</string>
    <string name="text_toast_room_add_not_exist">Before Add objects, you should Create a New Room or Open an existing one.</string>
    <string name="text_toast_room_save_not_exist">Before Save objects, you should Create a New Room or Open an existing one.</string>
    <string name="text_toast_room_saved_ok">Room saved.</string>
    <string name="text_toast_room_saved_error">Error Saving Room.</string>
    <string name="text_tv_switch_name">Switch Name</string>
    <string name="text_toast_light_switch_not_valid">Switch Name not valid.</string>
    <string name="text_toast_light_switch_already_exist">Switch Name already exist.</string>
    <string name="text_odf_title_room_data_not_present">Room data not present.</string>
    <string name="text_odf_message_room_data_not_present">Please try to create a new Room or Select an exist one.</string>
    <string name="text_odf_title_orientation_not_set">Orientation not Set.</string>
    <string name="text_odf_message_orientation_not_set">Please set the orientation.</string>
    <string name="text_odf_title_name_error">Name Error.</string>
    <string name="text_odf_message_name_not_valid">Name not valid.</string>
    <string name="text_odf_message_name_already_exist">Name already exist.</string>
    <string name="text_odf_title_protocol_not_valid">Protocol values are not valid.</string>
    <string name="text_odf_message_protocol_not_valid">Please set a valid Protocol values.</string>
    <string name="text_odf_title_format_not_valid">Format values are not valid.</string>
    <string name="text_odf_message_format_not_valid">Please set a valid Format values.</string>
    <string name="text_odf_title_saving">Saving &#8230; </string>
    <string name="text_odf_message_saving_ok">Saving OK.</string>
    <string name="text_odf_message_saving_error">Saving Error.</string>
    <string name="text_odf_title_deleting">Deleting &#8230; </string>
    <string name="text_odf_message_deleting_ok">Deleting OK.</string>
    <string name="text_odf_message_deleting_error">Deleting Error.</string>
    <string name="text_odf_message_ok_button">OK</string>
    <string name="text_yndf_title_data_not_saved">Data not saved.</string>
    <string name="text_yndf_message_data_save_confirmation">Do you want to save it ?</string>
    <string name="text_yndf_title_data_delete">Data is deleting &#8230; </string>
    <string name="text_yndf_message_data_delete_confirmation">Are you sure ?</string>
    <string name="text_yndf_title_tcp_ip_client_name_already_exist">Tcp Ip Client name already exist.</string>
    <string name="text_yndf_message_tcp_ip_client_name_already_exist_confirmation">Do you want to overwrite it ?</string>
    <string name="text_yndf_title_base_value_name_already_exist">Name already exist.</string>
    <string name="text_yndf_message_base_value_name_already_exist_confirmation">Do you want to overwrite it ?</string>
    <string name="text_yndf_title_numeric_value_name_already_exist">Numeric Value name already exist.</string>
    <string name="text_yndf_message_numeric_value_name_already_exist_confirmation">Do you want to overwrite it ?</string>
    <string name="text_yndf_title_sensor_value_name_already_exist">Sensor Value name already exist.</string>
    <string name="text_yndf_message_sensor_value_name_already_exist_confirmation">Do you want to overwrite it ?</string>
    <string name="text_yndf_btn_yes">Yes</string>
    <string name="text_yndf_btn_no">No</string>
    <string name="text_tv_hint_name">My Name</string>
    <string name="text_orientation_landscape">Landscape</string>
    <string name="text_orientation_vertical">Vertical</string>
    <string name="text_tv_name">Name</string>
    <string name="hint_et_name">Type a Name</string>
    <string name="text_tv_orientation">Orientation</string>
    <string name="text_rb_horizontal">Horizontal</string>
    <string name="text_rb_vertical">Vertical</string>
    <string name="text_tv_position">Position</string>
    <string name="text_tv_position_x">X:</string>
    <string name="text_tv_position_y">Y:</string>
    <string name="text_tv_position_z">Z:</string>
    <string name="text_tv_protocol_ui">DEVICE ADDRESS: </string>
    <string name="text_tv_protocol_data_addr">DATA ADDRESS: (Holding Registers, 0=40001)</string>
    <string name="text_tv_write_value_off">Value off:</string>
    <string name="text_tv_write_value_off_on">Value off->on:</string>
    <string name="text_tv_write_value_on_off">Value on->off:</string>
    <string name="text_tv_write_value_on">Value on:</string>
    <string name="text_tv_data_type">Data type</string>
    <string name="text_tv_nr_of_decimal">Nr of decimal</string>
    <string name="text_tv_um">Unit of measure</string>
    <string name="text_tv_read_only">Read only</string>
    <string name="text_tv_write_only">Write only</string>
    <string name="text_tv_min_nr_char_to_show">Min nr of char to show</string>
    <string name="text_tv_update_millis">Update millis</string>
    <string name="text_tv_sensor_type">Sensor type</string>
    <string name="text_tv_sensor_value">Sensor value</string>
    <string name="text_tv_sensor_enable_simulation">Enable simulation</string>
    <string name="text_tv_sensor_ampl_k">Amplifier k</string>
    <string name="text_tv_sensor_low_pass_filter_k">Low pass filter k</string>
    <string name="text_tv_sensor_sample_time_ms">Sensor sample time ms</string>
    <string name="text_tv_sensor_write_update_time_ms">Sensor write update time ms</string>
    <string name="text_nvpa_tv_protocol_field_1">IDENTIFIER(2 byte long)</string>
    <string name="text_nvpa_tv_protocol_field_2">ADDRESS(2 byte long)</string>
    <string name="text_nvpa_tv_protocol_field_3">NRs OF 16 VALUE (2 byte long x VALUE)</string>
    <string name="text_stica_btn_save_tcp_ip_client_data">SAVE</string>
    <string name="title_item_menu_delete">Delete</string>
    <string name="title_item_menu_save">Save</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="text_tv_server_name">Server Name</string>
    <string name="hint_et_server_name">Server Name</string>
    <string name="text_tv_server_address">Server Address</string>
    <string name="hint_et_server_address">address</string>
    <string name="text_stica_tv_server_port">TCP IP Server Port</string>
    <string name="hint_stica_et_server_port">502</string>
    <string name="text_stica_tv_timeout">Timeout(ms)</string>
    <string name="hint_stica_et_timeout">3000</string>
    <string name="text_stica_tv_comm_send_data_delay">Send data delay(ms)</string>
    <string name="hint_stica_et_comm_send_data_delay">4</string>
    <string name="text_stica_tv_comm_receive_wait_data">Receive data delay(ms)</string>
    <string name="hint_stica_et_comm_receive_wait_data">100</string>
    <string name="text_stica_tv_comm_nr_max_err">Max nr of communication error</string>
    <string name="hint_stica_et_comm_nr_max_err">3</string>
    <string name="text_tv_protocol">Protocol</string>
    <string name="text_stica_tv_protocol_field_1">HEAD WORD(2 byte long)</string>
    <string name="text_stica_tv_protocol_field_2">TAIL WORD(2 byte long)</string>
</resources>