<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/id_tv_server_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tv_server_name" />

        <com.pretolesi.easyscada.CustomControls.StringEditText
            android:id="@+id/id_stica_et_server_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_tv_server_name"
            android:layout_alignParentStart="true"
            android:hint="@string/hint_et_server_name" />

        <TextView
            android:id="@+id/id_tv_server_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_stica_et_server_name"
            android:text="@string/text_tv_server_address" />

        <com.pretolesi.easyscada.CustomControls.StringEditText
            android:id="@+id/id_et_server_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_tv_server_address"
            android:layout_alignParentStart="true"
            android:hint="@string/hint_et_server_address" />

        <TextView
            android:id="@+id/id_stica_tv_server_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_et_server_address"
            android:text="@string/text_stica_tv_server_port" />

        <com.pretolesi.easyscada.CustomControls.NumericEditText
            android:id="@+id/id_stica_et_server_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_stica_tv_server_port"
            android:layout_alignParentStart="true"
            android:hint="@string/hint_stica_et_server_port"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/id_stica_tv_timeout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_stica_et_server_port"
            android:text="@string/text_stica_tv_timeout" />

        <com.pretolesi.easyscada.CustomControls.NumericEditText
            android:id="@+id/id_stica_et_timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_stica_tv_timeout"
            android:layout_alignParentStart="true"
            android:hint="@string/hint_stica_et_timeout"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/id_stica_tv_comm_send_data_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_stica_et_timeout"
            android:text="@string/text_stica_tv_comm_send_data_delay" />

        <com.pretolesi.easyscada.CustomControls.NumericEditText
            android:id="@+id/id_stica_et_comm_send_data_delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_stica_tv_comm_send_data_delay"
            android:layout_alignParentStart="true"
            android:hint="@string/hint_stica_et_comm_send_data_delay"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/id_stica_tv_comm_receive_wait_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_stica_et_comm_send_data_delay"
            android:text="@string/text_stica_tv_comm_receive_wait_data" />

        <com.pretolesi.easyscada.CustomControls.NumericEditText
            android:id="@+id/id_stica_et_comm_receive_wait_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_stica_tv_comm_receive_wait_data"
            android:layout_alignParentStart="true"
            android:hint="@string/hint_stica_et_comm_receive_wait_data"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/id_stica_tv_comm_nr_max_err"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_stica_et_comm_receive_wait_data"
            android:text="@string/text_stica_tv_comm_nr_max_err" />

        <com.pretolesi.easyscada.CustomControls.NumericEditText
            android:id="@+id/id_stica_et_comm_nr_max_err"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_stica_tv_comm_nr_max_err"
            android:layout_alignParentStart="true"
            android:hint="@string/hint_stica_et_comm_nr_max_err"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/id_stica_tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_stica_et_comm_nr_max_err"
            android:text="@string/text_tv_protocol" />

        <Spinner
            android:id="@+id/id_stica_spn_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/id_stica_tv_protocol" />

        <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/id_stica_hlsv_protocol_fields"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/id_stica_spn_protocol">

            <RelativeLayout
                android:id="@+id/id_stica_rl_protocol_fields"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/id_stica_tv_protocol_field_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_stica_tv_protocol_field_1"
                    android:labelFor="@+id/id_stica_et_protocol_field_1"/>

                <com.pretolesi.easyscada.CustomControls.NumericEditText
                    android:id="@+id/id_stica_et_protocol_field_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/id_stica_tv_protocol_field_1"
                    android:text="0"
                    android:inputType="number"/>

                <TextView
                    android:id="@+id/id_stica_tv_protocol_field_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/id_stica_tv_protocol_field_1"
                    android:layout_marginStart="10dp"
                    android:text="@string/text_stica_tv_protocol_field_2"
                    android:labelFor="@+id/id_stica_et_protocol_field_2"/>

                <com.pretolesi.easyscada.CustomControls.NumericEditText
                    android:id="@+id/id_stica_et_protocol_field_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/id_stica_tv_protocol_field_2"
                    android:layout_toEndOf="@+id/id_stica_tv_protocol_field_1"
                    android:layout_marginStart="10dp"
                    android:text="0"
                    android:inputType="number"/>

            </RelativeLayout>
        </HorizontalScrollView>

    </RelativeLayout>
</ScrollView>