<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
<!--

    <ImageView
        android:src="@drawable/header_logo"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name" />
-->

    <EditText
        android:id="@+id/id_et_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/text_tv_hint_name" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButtonPortrait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_orientation_vertical" />

            <RadioButton
                android:id="@+id/radioButtonLandscape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_orientation_landscape" />
    </RadioGroup>

</LinearLayout>